--- a/Bai1/index.html
+++ b/Bai1/index.html
@@ -8,7 +8,7 @@
 
     <title>Cửa hàng sách InzG0anH</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Bai2/style.css">
 </head>
 
 <body>
