--- a/Bai1/index.html
+++ b/Bai1/index.html
@@ -3,9 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>Cửa hàng sách InzG0anH</title>
 
     <link rel="stylesheet" href="../Bai2/style.css">
@@ -15,7 +13,6 @@
 
     <header>
         <h1>Cửa hàng sách InzG0anH</h1>
-
         <nav>
             <ul>
                 <li><a href="#">Trang chủ</a></li>
@@ -35,11 +32,36 @@
         <section id="product-list-container">
             <h2>Sản phẩm nổi bật</h2>
 
+            <div class="controls-container">
+                <input type="text" id="searchInput" placeholder="Tìm kiếm sách theo tên...">
+                <button id="searchBtn">Tìm</button>
+                <button id="showAddProductFormBtn">Thêm sản phẩm</button>
+            </div>
+
+            <form id="addProductForm" class="hidden">
+                <h3>Thêm sản phẩm mới</h3>
+                <p id="errorMsg" style="color:red;"></p>
+
+                <div>
+                    <label for="newProductName">Tên sản phẩm:</label>
+                    <input type="text" id="newProductName" required>
+                </div>
+                <div>
+                    <label for="newProductPrice">Giá:</label>
+                    <input type="number" id="newProductPrice" required>
+                </div>
+                <div>
+                    <label for="newProductDesc">Mô tả:</label>
+                    <textarea id="newProductDesc" rows="3"></textarea>
+                </div>
+
+                <button type="submit">Thêm</button>
+                <button type="button" id="cancelBtn">Hủy</button>
+            </form>
             <div id="product-list">
 
                 <article class="product-item">
                     <img src="java.jpg" alt="Bìa sách Lập trình Java">
-
                     <h3 class="product-name">100 Bài tập Lập trình Java</h3>
                     <p class="product-desc">Tổng hợp 100 bài tập Java cơ bản có lời giải chi tiết.</p>
                     <p class="product-price">Giá: 220.000 VNĐ</p>
@@ -47,7 +69,6 @@
 
                 <article class="product-item">
                     <img src="C++.jpg" alt="Bìa sách Lập trình C++">
-
                     <h3 class="product-name">100 Bài tập Lập trình C++</h3>
                     <p class="product-desc">Nắm vững C++ qua 100 bài tập thực hành có lời giải.</p>
                     <p class="product-price">Giá: 350.000 VNĐ</p>
@@ -55,7 +76,6 @@
 
                 <article class="product-item">
                     <img src="C.jpg" alt="Bìa sách Lập trình C#">
-
                     <h3 class="product-name">Lập trình C# (Cơ bản đến Nâng cao)</h3>
                     <p class="product-desc">Khóa học toàn diện về C# cho người mới bắt đầu.</p>
                     <p class="product-price">Giá: 150.000 VNĐ</p>
@@ -65,7 +85,6 @@
 
         <section id="contact-form-section">
             <h2>Liên hệ với chúng tôi</h2>
-
             <form id="contact-form">
                 <div>
                     <label for="contact-name">Họ và tên:</label>
@@ -79,7 +98,6 @@
                     <label for="contact-message">Nội dung:</label>
                     <textarea id="contact-message" name="message" rows="4"></textarea>
                 </div>
-
                 <button type="submit">Gửi</button>
             </form>
         </section>
@@ -90,7 +108,7 @@
         <p>&copy; 2025 Cửa hàng sách InzG0anH. Mọi quyền được bảo lưu.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../Bai3/script.js"></script>
 </body>
 
 </html>
